--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jd-metals-frontend",
+  "name": "react-dashboard-materialui-ts-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
